[gd_scene load_steps=3 format=3 uid="uid://cwnx7qgab7ppj"]

[ext_resource type="Script" uid="uid://ck72bv1wva51a" path="res://UI/settings_menu/settings_menu.gd" id="1_1syaf"]
[ext_resource type="Theme" uid="uid://d1gcsqycnxqwm" path="res://UI/default_theme.tres" id="1_gdbu8"]

[node name="SettingsMenu" type="CanvasLayer" node_paths=PackedStringArray("master_slider", "sfx_slider", "music_slider", "fullscreen_toggle", "back_button", "resume_button", "settings_button", "save_and_quit_button", "settings_root", "pause_root")]
layer = 5
script = ExtResource("1_1syaf")
master_slider = NodePath("Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/master_slider")
sfx_slider = NodePath("Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/sfx_slider")
music_slider = NodePath("Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/music_slider")
fullscreen_toggle = NodePath("Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4/fullscreen_toggle")
back_button = NodePath("Settings/Button/Button")
resume_button = NodePath("Pause/VBoxContainer/resume")
settings_button = NodePath("Pause/VBoxContainer/settings")
save_and_quit_button = NodePath("Pause/VBoxContainer/save_and_quit")
settings_root = NodePath("Settings")
pause_root = NodePath("Pause")

[node name="Background" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.41960785)
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="PanelContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1000.0
offset_top = -600.0
offset_right = 1000.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gdbu8")

[node name="MarginContainer" type="MarginContainer" parent="Settings/Control"]
layout_mode = 2
theme_type_variation = &"MarginSuper"

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/Control/MarginContainer"]
layout_mode = 2
theme_type_variation = &"vbox_20"

[node name="Label" type="Label" parent="Settings/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Settings/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"vbox_5"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_type_variation = &"hbox_20"

[node name="Label" type="Label" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="master_slider" type="HSlider" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 1.5
step = 0.025

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_type_variation = &"hbox_20"

[node name="Label" type="Label" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Music Volume"

[node name="music_slider" type="HSlider" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 1.5
step = 0.025

[node name="HBoxContainer3" type="HBoxContainer" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_type_variation = &"hbox_20"

[node name="Label" type="Label" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Effects Volume"

[node name="sfx_slider" type="HSlider" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 1.5
step = 0.025

[node name="HBoxContainer4" type="HBoxContainer" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_type_variation = &"hbox_20"

[node name="Label" type="Label" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Fullscreen"

[node name="fullscreen_toggle" type="CheckButton" parent="Settings/Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="Button" type="HBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -923.0
offset_top = 542.0
offset_right = 939.0
offset_bottom = 634.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"hbox_20"
alignment = 2

[node name="Button" type="Button" parent="Settings/Button"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Back"

[node name="Pause" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"vbox_10"
alignment = 1

[node name="resume" type="Button" parent="Pause/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="settings" type="Button" parent="Pause/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="save_and_quit" type="Button" parent="Pause/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Save and Quit"
